--- a/resources/js/locales/es/profile.json
+++ b/resources/js/locales/es/profile.json
@@ -1,6 +1,6 @@
 {
   "profile": {
-    "menu_title": "Configuración",
+    "menu_title": "ConfiguraciÃ³n",
     "tabs": {
       "general": "General",
       "security": "Seguridad",
@@ -8,14 +8,14 @@
       "ai": "Inteligencia Artificial"
     },
     "title": "Perfil",
-    "settings_description": "Actualiza tu información personal y ajustes de seguridad.",
+    "settings_description": "Actualiza tu informaciÃ³n personal y ajustes de seguridad.",
     "editProfile": "Editar Perfil",
-    "changePassword": "Cambiar Contraseña",
+    "changePassword": "Cambiar ContraseÃ±a",
     "name": "Nombre",
-    "email": "Correo Electrónico",
-    "currentPassword": "Contraseña Actual",
-    "newPassword": "Nueva Contraseña",
-    "confirmPassword": "Confirmar Contraseña",
+    "email": "Correo ElectrÃ³nico",
+    "currentPassword": "ContraseÃ±a Actual",
+    "newPassword": "Nueva ContraseÃ±a",
+    "confirmPassword": "Confirmar ContraseÃ±a",
     "updateProfile": "Actualizar Perfil",
     "update_success": "Perfil actualizado exitosamente.",
     "update_error": "Error al actualizar el perfil.",
@@ -24,39 +24,39 @@
       "saveChanges": "Guardar Cambios"
     },
     "messages": {
-      "unsavedChanges": "Tienes cambios no guardados. ¿Deseas continuar?"
+      "unsavedChanges": "Tienes cambios no guardados. Â¿Deseas continuar?"
     },
     "information": {
-      "title": "Información del Perfil",
-      "description": "Actualiza la información de tu cuenta y dirección de correo electrónico.",
+      "title": "InformaciÃ³n del Perfil",
+      "description": "Actualiza la informaciÃ³n de tu cuenta y direcciÃ³n de correo electrÃ³nico.",
       "saved": "Guardado.",
       "nameLabel": "Nombre",
       "namePlaceholder": "Tu Nombre",
-      "emailLabel": "Correo Electrónico",
+      "emailLabel": "Correo ElectrÃ³nico",
       "emailPlaceholder": "tu.correo@ejemplo.com",
-      "emailUnverified": "Tu dirección de correo electrónico no está verificada. Por favor verifícala para acceder a todas las funciones.",
-      "sendVerification": "Enviar Correo de Verificación",
-      "verificationSent": "Se ha enviado un nuevo enlace de verificación a tu dirección de correo electrónico.",
-      "applicationLanguage": "Idioma de la Aplicación",
-      "languageDescription": "Selecciona tu idioma preferido para la interfaz de la aplicación.",
+      "emailUnverified": "Tu direcciÃ³n de correo electrÃ³nico no estÃ¡ verificada. Por favor verifÃ­cala para acceder a todas las funciones.",
+      "sendVerification": "Enviar Correo de VerificaciÃ³n",
+      "verificationSent": "Se ha enviado un nuevo enlace de verificaciÃ³n a tu direcciÃ³n de correo electrÃ³nico.",
+      "applicationLanguage": "Idioma de la AplicaciÃ³n",
+      "languageDescription": "Selecciona tu idioma preferido para la interfaz de la aplicaciÃ³n.",
       "currentLanguage": "Idioma Actual",
-      "phoneLabel": "Teléfono",
-      "phonePlaceholder": "Tu número de teléfono",
-      "bioLabel": "Biografía",
-      "bioPlaceholder": "Háblanos un poco de ti...",
+      "phoneLabel": "TelÃ©fono",
+      "phonePlaceholder": "Tu nÃºmero de telÃ©fono",
+      "bioLabel": "BiografÃ­a",
+      "bioPlaceholder": "HÃ¡blanos un poco de ti...",
       "sections": {
-        "personal": "Información Personal",
+        "personal": "InformaciÃ³n Personal",
         "contact": "Detalles de Contacto",
-        "bio": "Sobre Mí",
+        "bio": "Sobre MÃ­",
         "language": "Idioma y Preferencias"
       }
     },
     "statistics": {
-      "title": "Estadísticas de la Cuenta",
+      "title": "EstadÃ­sticas de la Cuenta",
       "description": "Resumen de la actividad y estado de tu cuenta.",
       "memberSince": "Miembro Desde",
-      "daysActive": "Días Activo",
-      "days": "días",
+      "daysActive": "DÃ­as Activo",
+      "days": "dÃ­as",
       "accountStatus": "Estado de la Cuenta",
       "active": "Activa",
       "emailStatus": "Estado del Correo",
@@ -65,41 +65,41 @@
     },
     "connectedAccounts": {
       "title": "Cuentas Sociales Conectadas",
-      "description": "Administra tus perfiles de redes sociales conectados para publicación de contenido.",
+      "description": "Administra tus perfiles de redes sociales conectados para publicaciÃ³n de contenido.",
       "connected": "Conectadas",
       "notConnected": "No Conectadas",
       "manageLink": "Administrar conexiones en el Gestor de Contenido"
     },
     "password": {
-      "title": "Actualizar Contraseña",
-      "description": "Mantén tu cuenta segura con una contraseña fuerte",
-      "currentPassword": "Contraseña Actual",
-      "newPassword": "Nueva Contraseña",
-      "confirmPassword": "Confirmar Nueva Contraseña",
-      "updateButton": "Actualizar Contraseña",
-      "successTitle": "¡Contraseña actualizada exitosamente!",
+      "title": "Actualizar ContraseÃ±a",
+      "description": "MantÃ©n tu cuenta segura con una contraseÃ±a fuerte",
+      "currentPassword": "ContraseÃ±a Actual",
+      "newPassword": "Nueva ContraseÃ±a",
+      "confirmPassword": "Confirmar Nueva ContraseÃ±a",
+      "updateButton": "Actualizar ContraseÃ±a",
+      "successTitle": "Â¡ContraseÃ±a actualizada exitosamente!",
       "successMessage": "La seguridad de tu cuenta ha sido mejorada.",
       "errorTitle": "Por favor corrige los siguientes errores:",
-      "securityTips": "Consejos de Seguridad para Contraseñas:",
-      "tip1": "Usa al menos 8 caracteres con una mezcla de letras, números y símbolos",
-      "tip2": "Evita usar información personal o palabras comunes",
-      "tip3": "Considera usar un administrador de contraseñas para mayor seguridad",
+      "securityTips": "Consejos de Seguridad para ContraseÃ±as:",
+      "tip1": "Usa al menos 8 caracteres con una mezcla de letras, nÃºmeros y sÃ­mbolos",
+      "tip2": "Evita usar informaciÃ³n personal o palabras comunes",
+      "tip3": "Considera usar un administrador de contraseÃ±as para mayor seguridad",
       "placeholders": {
-        "current": "Ingresa tu contraseña actual",
-        "new": "Ingresa tu nueva contraseña",
-        "confirm": "Confirma tu nueva contraseña"
+        "current": "Ingresa tu contraseÃ±a actual",
+        "new": "Ingresa tu nueva contraseÃ±a",
+        "confirm": "Confirma tu nueva contraseÃ±a"
       }
     },
     "delete": {
       "title": "Eliminar Cuenta",
       "description": "Eliminar permanentemente tu cuenta y datos",
-      "warningTitle": "Advertencia: Acción Irreversible",
-      "warningMessage": "Una vez que tu cuenta sea eliminada, todos sus recursos y datos serán eliminados permanentemente. Antes de eliminar tu cuenta, por favor descarga cualquier dato o información que desees conservar.",
+      "warningTitle": "Advertencia: AcciÃ³n Irreversible",
+      "warningMessage": "Una vez que tu cuenta sea eliminada, todos sus recursos y datos serÃ¡n eliminados permanentemente. Antes de eliminar tu cuenta, por favor descarga cualquier dato o informaciÃ³n que desees conservar.",
       "deleteButton": "Eliminar Cuenta",
-      "confirmTitle": "¿Estás seguro de que quieres eliminar tu cuenta?",
-      "confirmMessage": "Por favor ingresa tu contraseña para confirmar que deseas eliminar permanentemente tu cuenta.",
-      "passwordLabel": "Contraseña",
-      "passwordPlaceholder": "Ingresa tu contraseña para confirmar",
+      "confirmTitle": "Â¿EstÃ¡s seguro de que quieres eliminar tu cuenta?",
+      "confirmMessage": "Por favor ingresa tu contraseÃ±a para confirmar que deseas eliminar permanentemente tu cuenta.",
+      "passwordLabel": "ContraseÃ±a",
+      "passwordPlaceholder": "Ingresa tu contraseÃ±a para confirmar",
       "cancel": "Cancelar"
     },
     "toast": {
@@ -107,9 +107,9 @@
       "languageChangeError": "Error cambiando idioma."
     },
     "ai": {
-      "title": "Configuración de IA Personal",
+      "title": "ConfiguraciÃ³n de IA Personal",
       "description": "Configura tus propias claves de API para habilitar funciones inteligentes personalizadas.",
-      "hint": "Si configuras un proveedor aquí, el sistema usará tu clave personal en lugar de la predeterminada del sistema. Esto te da más control sobre el uso y las capacidades.",
+      "hint": "Si configuras un proveedor aquÃ­, el sistema usarÃ¡ tu clave personal en lugar de la predeterminada del sistema. Esto te da mÃ¡s control sobre el uso y las capacidades.",
       "get_key": "Obtener Clave",
       "api_key_label": "Clave API",
       "secured_storage": "Almacenamiento Seguro Encriptado"
