--- a/resources/js/locales/en/common.json
+++ b/resources/js/locales/en/common.json
@@ -2,6 +2,8 @@
   "common": {
     "deleteConfirmTitle": "Confirm deletion",
     "deleteConfirm": "Are you sure you want to delete this item? This action cannot be undone.",
+    "deleteSuccess": "Item deleted successfully",
+    "deleteError": "Error deleting item",
     "welcome": "Welcome",
     "loading": "Loading...",
     "deleting": "Deleting...",
