improve text in the button google in the register to continue with google

--- a/resources/js/locales/en/auth.json
+++ b/resources/js/locales/en/auth.json
@@ -83,7 +83,7 @@
         "register": "Register",
         "registering": "Registering...",
         "login": "Return to login",
-        "google": "Google",
+        "google": "Continue with Google",
         "privacyPolicy": "Privacy Policy",
         "termsAndConditions": "Terms and Conditions"
       },
