--- a/resources/js/locales/es/auth.json
+++ b/resources/js/locales/es/auth.json
@@ -83,7 +83,7 @@
         "register": "Registrarse",
         "registering": "Registrando...",
         "login": "Volver al login",
-        "google": "Google",
+        "google": "Continuar con Google",
         "privacyPolicy": "Política de Privacidad",
         "termsAndConditions": "Términos y Condiciones"
       },
