--- a/resources/js/locales/en/publications.json
+++ b/resources/js/locales/en/publications.json
@@ -262,7 +262,8 @@
         "scheduleRequired": "You must schedule a date for all selected networks or set a global date.",
         "scheduledAtRequired": "Scheduled date is required when you select social networks",
         "socialAccountsRequired": "Please select at least one social media account",
-        "singleVideo": "You can only upload one video per publication."
+        "singleVideo": "You can only upload one video per publication.",
+        "scheduledMinDifference": "The date must be at least 5 minutes after the current time"
       },
       "cancel_confirmation": {
         "title": "Cancel Publication",
