feat: update localization for English and Spanish

--- a/resources/js/locales/en/common.json
+++ b/resources/js/locales/en/common.json
@@ -22,6 +22,7 @@
     "allSaved": "All Saved",
     "refresh": "Refresh",
     "save": "Save",
+    "apply": "Apply",
     "cancel": "Cancel",
     "continue": "Continue",
     "delete": "Delete",
