--- a/resources/js/locales/es/common.json
+++ b/resources/js/locales/es/common.json
@@ -24,6 +24,7 @@
     "allSaved": "Todo guardado",
     "refresh": "Recargar",
     "save": "Guardar",
+    "apply": "Aplicar",
     "cancel": "Cancelar",
     "continue": "Continuar",
     "delete": "Eliminar",
