--- a/resources/js/locales/en/publications.json
+++ b/resources/js/locales/en/publications.json
@@ -178,6 +178,17 @@
         "publication": "Publication",
         "actions": "Actions"
       },
+      "comments": {
+        "title": "Internal Comments",
+        "placeholder": "Write a comment...",
+        "noComments": "No comments yet. Start the conversation!",
+        "loading": "Loading comments...",
+        "deleteConfirm": "Are you sure you want to delete this comment?",
+        "deleteSuccess": "Comment deleted",
+        "deleteError": "Failed to delete comment",
+        "postError": "Failed to post comment",
+        "delete": "Delete"
+      },
       "publish": {
         "title": "Publish",
         "selectPlatforms": "Select Platforms",
@@ -226,6 +237,7 @@
       },
       "preview": {
         "title": "Preview",
+        "disclaimer": "Preview is an approximation. Actual appearance may vary by platform.",
         "simulated": "Simulated",
         "real": "Real",
         "realInfo": "Real Preview",
