feat(activity): implement publication activity tracking and audit log

--- a/resources/js/locales/en/activity.json
+++ b/resources/js/locales/en/activity.json
@@ -23,7 +23,9 @@
         "statusChanged": "Status changed",
         "pending": "Pending",
         "scheduled": "Scheduled",
-        "draft": "Draft"
+        "draft": "Draft",
+        "scheduled_time_changed": "Scheduled time changed",
+        "cancelled": "Cancelled"
       }
     }
   }
